--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,18 +15,23 @@
     "airbnb",
     "prettier"
   ],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
       "modules": true,
       "experimentalObjectRestSpread": true
     },
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+      },
     "ecmaVersion": 12,
     "requireConfigFile": false,
     "sourceType": "module"
   },
   "plugins": ["react", "prettier", "import", "babel"],
   "rules": {
+    "react/button-has-type":0,
     "import/no-named-as-default": 0,
     "import/no-named-as-default-member": 0,
     "jsx-a11y/label-has-associated-control":0,
@@ -62,6 +67,10 @@
     ]
   },
   "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    },
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
