husky & lint-staged

--- a/package.json
+++ b/package.json
@@ -64,12 +64,12 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
-
     }
   },
   "lint-staged": {
     "*.js": [
       "npm run lint:fix",
+      "prettier --write",
       "git add"
     ]
   }
