--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
   "lint-staged": {
     "*.js": [
       "npm run lint:fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
